<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_save_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGallery"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

    <Button
        android:id="@+id/btnGallery"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_gallery_text"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

    <TextView
        android:id="@+id/brightness_label"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/brightness_label_text"
        app:layout_constraintBottom_toTopOf="@+id/contrast_label"
        app:layout_constraintEnd_toStartOf="@+id/slBrightness"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGallery" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slBrightness"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250"
        android:valueTo="250"
        app:layout_constraintBottom_toTopOf="@+id/slContrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/brightness_label"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

    <TextView
        android:id="@+id/contrast_label"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/contrast_label_text"
        app:layout_constraintBottom_toTopOf="@+id/saturation_label"
        app:layout_constraintEnd_toStartOf="@+id/slContrast"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightness_label" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slContrast"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250"
        android:valueTo="250"
        app:layout_constraintBottom_toTopOf="@+id/slSaturation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/contrast_label"
        app:layout_constraintTop_toBottomOf="@+id/slBrightness" />

    <TextView
        android:id="@+id/saturation_label"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/saturation_label_text"
        app:layout_constraintBottom_toTopOf="@+id/gamma_label"
        app:layout_constraintEnd_toStartOf="@+id/slSaturation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrast_label" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slSaturation"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="-250"
        android:valueTo="250"
        app:layout_constraintBottom_toTopOf="@+id/slGamma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saturation_label"
        app:layout_constraintTop_toBottomOf="@+id/slContrast">

    </com.google.android.material.slider.Slider>

    <TextView
        android:id="@+id/gamma_label"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/gamma_label_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/slGamma"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saturation_label" />

    <com.google.android.material.slider.Slider
        android:id="@+id/slGamma"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:stepSize="0.2"
        android:value="1"
        android:valueFrom="0.2"
        android:valueTo="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/gamma_label"
        app:layout_constraintTop_toBottomOf="@+id/slSaturation">

    </com.google.android.material.slider.Slider>


</androidx.constraintlayout.widget.ConstraintLayout>